[Fix] Constructions: No vertical shifting when 2 lines of components

--- a/public/resources/css/city.css
+++ b/public/resources/css/city.css
@@ -274,6 +274,7 @@
     flex-direction: row;
     gap:2px;
     margin-left:0.5em;
+    padding:0;
 }
 #constructions .components .item_label {
     height:1.8em;
